@startuml

title __PERSISTENCE's Class Diagram__\n

  namespace persistence {
    class persistence.CtrlPersistence {
        + route : String
        + routek : String
        + CtrlPersistence()
        + create_user()
        + delete_kakuro()
        + delete_kakuro_dir()
        + delete_user()
        + new_game()
        + new_kakuro()
        + save_game()
        + show_kakuro()
        + show_stats()
        + update_stats()
        + validate_correctness_game()
        - InitializePersistance()
    }
  }
  

  namespace persistence {
    class persistence.DataKakuro {
        + DataKakuro()
        + delete_kakuro_dir()
        + new_game()
        + new_kakuro()
        + save_game()
        + show_kakuro()
        + validate_correctness_game()
    }
  }
  

  namespace persistence {
    class persistence.DataStats {
        + DataStats()
        + show_stats()
        + update_stats()
    }
  }
  

  namespace persistence {
    class persistence.DataUser {
        + DataUser()
        + create_user()
        + delete_user()
    }
  }
  

  persistence.CtrlPersistence o-- domain.CtrlDomain : ctrlDomain
  persistence.CtrlPersistence o-- persistence.DataKakuro : dataKakuro
  persistence.CtrlPersistence o-- persistence.DataStats : dataStats
  persistence.CtrlPersistence o-- persistence.DataUser : dataUser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
